README file copied in debian dir

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,22 @@
+libclearbricks (0.8-3) unstable; urgency=low ; svnrev=17
+
+  * SVN Revision 13 - olivier, on Wed, 10 Jan 2007 00:51:10 +0100
+    Makefile and Debian package for clearbricks
+
+  * SVN Revision 14 - olivier, on Wed, 10 Jan 2007 16:27:08 +0100
+    Clearbricks Debian packager
+
+  * SVN Revision 15 - olivier, on Thu, 11 Jan 2007 14:44:42 +0100
+    Test if database functions exist on dblayer driver load.
+
+  * SVN Revision 16 - olivier, on Fri, 12 Jan 2007 01:30:36 +0100
+    Fixed Windows bug in files::makeDir.
+
+  * SVN Revision 17 - olivier, on Fri, 12 Jan 2007 01:57:56 +0100
+    Fixed an issue with recursive files::makeDir and open_basedir.
+
+ -- Olivier Meunier <olivier@clearbricks.org>  Fri, 12 Jan 2007 13:34:21 +0100
+
 libclearbricks (0.8-2) unstable; urgency=low ; svnrev=12
 
   * SVN Revision 10 - olivier, on Tue, 09 Jan 2007 13:53:03 +0100
