--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,25 @@
+libclearbricks (0.8-4) unstable; urgency=low ; svnrev=23
+
+  * SVN Revision 18 - mik, on Fri, 12 Jan 2007 13:33:59 +0100
+      libclearbricks' readme in the package
+
+  * SVN Revision 19 - mik, on Fri, 12 Jan 2007 13:36:13 +0100
+      empty so removed
+
+  * SVN Revision 20 - mik, on Mon, 15 Jan 2007 18:24:05 +0100
+      README file copied in debian dir
+
+  * SVN Revision 21 - olivier, on Tue, 16 Jan 2007 15:17:05 +0100
+    Test .svn dir before mkdcl.php launch
+
+  * SVN Revision 22 - olivier, on Tue, 16 Jan 2007 15:48:04 +0100
+    Fix in files::touch() method
+
+  * SVN Revision 23 - olivier, on Tue, 16 Jan 2007 16:12:02 +0100
+    Zend hash del key or index fix.
+
+ -- Olivier Meunier <olivier@clearbricks.org>  Tue, 16 Jan 2007 16:12:50 +0100
+
 libclearbricks (0.8-3) unstable; urgency=low ; svnrev=17
 
   * SVN Revision 13 - olivier, on Wed, 10 Jan 2007 00:51:10 +0100
