--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,149 @@
+libclearbricks (0.8-12) unstable; urgency=low ; svnrev=60
+
+  * SVN Revision 53 - pep, on Sun, 03 Jun 2007 12:31:25 +0200
+    Changed the way we obtain current TZ
+
+  * SVN Revision 54 - olivier, on Mon, 11 Jun 2007 10:46:06 +0200
+    Changed default values in sessionDB constructor
+
+  * SVN Revision 55 - pep, on Tue, 12 Jun 2007 19:51:21 +0200
+    Fixed a bug
+
+  * SVN Revision 56 - biou, on Wed, 13 Jun 2007 14:24:02 +0200
+    permits file creation with putContent
+
+  * SVN Revision 57 - biou, on Thu, 21 Jun 2007 17:15:06 +0200
+    added a consistency check on the moveFile method
+
+  * SVN Revision 58 - olivier, on Thu, 28 Jun 2007 16:03:35 +0200
+    Added video/x-flv in lib.files
+
+  * SVN Revision 59 - olivier, on Mon, 02 Jul 2007 10:29:10 +0200
+    Fixed bugs in socketMail::getFrom
+
+  * SVN Revision 60 - mik, on Mon, 02 Jul 2007 11:07:16 +0200
+    export LANG=C before svn commands
+
+ -- Olivier Meunier <olivier@clearbricks.org>  Mon, 02 Jul 2007 11:09:40 +0200
+
+libclearbricks (0.8-11) unstable; urgency=low ; svnrev=52
+
+  * SVN Revision 36 - olivier, on Thu, 15 Feb 2007 19:02:26 +0100
+    Fixed redirect bug in netHttp
+
+  * SVN Revision 37 - olivier, on Sun, 18 Feb 2007 18:08:32 +0100
+    Added default timezone in common/_main.php
+
+  * SVN Revision 38 - olivier, on Sun, 18 Feb 2007 18:17:22 +0100
+    Changed template::getData() code.
+
+  * SVN Revision 39 - olivier, on Sun, 18 Feb 2007 22:20:26 +0100
+    template::getData() optim.
+
+  * SVN Revision 40 - olivier, on Mon, 19 Feb 2007 11:02:48 +0100
+    Added strict_check mode in xmlrpcServer. Default to false.
+
+  * SVN Revision 41 - olivier, on Mon, 19 Feb 2007 11:24:51 +0100
+    Removed l10n::getHtmlFile() and added l10n::getFilePath().
+
+  * SVN Revision 42 - olivier, on Fri, 23 Feb 2007 14:00:39 +0100
+    Fixed a bug with starting dot lines in nntp class.
+
+  * SVN Revision 43 - pep, on Fri, 23 Feb 2007 16:43:40 +0100
+    Small fix : seems better ...
+
+  * SVN Revision 44 - olivier, on Mon, 26 Feb 2007 14:35:56 +0100
+    Forgot 'class' attribute for 'a' tag.
+
+  * SVN Revision 45 - pep, on Wed, 28 Feb 2007 02:50:48 +0100
+    Shouldn't inflate incoming content when use_gzip = false
+
+  * SVN Revision 46 - olivier, on Wed, 21 Mar 2007 16:33:28 +0100
+     * New dbSchema classes collection.
+     * Removed getTables() and getColumns() method from dbLayer().
+     * Added a database() method in dbLayer returning current database in use.
+
+  * SVN Revision 47 - olivier, on Wed, 21 Mar 2007 23:58:02 +0100
+    Returns changes count in dbStruct::synchronize().
+
+  * SVN Revision 48 - olivier, on Fri, 30 Mar 2007 17:30:22 +0200
+    Added a static property (https_scheme_on_443) to force https scheme if port is 443
+    in http::getHost().
+
+  * SVN Revision 49 - olivier, on Mon, 02 Apr 2007 13:35:06 +0200
+    added http::browserUID.
+
+  * SVN Revision 50 - olivier, on Mon, 02 Apr 2007 14:52:44 +0200
+    Allow secure session cookies
+
+  * SVN Revision 51 - olivier, on Mon, 02 Apr 2007 14:57:20 +0200
+    Added cookie_domain for session
+
+  * SVN Revision 52 - olivier, on Tue, 17 Apr 2007 17:53:44 +0200
+    Signature fix in mail.convert
+
+ -- Olivier Meunier <olivier@clearbricks.org>  Thu, 19 Apr 2007 16:06:54 +0200
+
+libclearbricks (0.8-10) unstable; urgency=low ; svnrev=35
+
+  * SVN Revision 33 - mik, on Thu, 01 Feb 2007 18:39:56 +0100
+    Romuald:gruik pour display de la date en fonction de la timezone
+
+  * SVN Revision 34 - olivier, on Mon, 05 Feb 2007 11:05:25 +0100
+    Timezone display in dt::str and dt::dt2str
+
+  * SVN Revision 35 - olivier, on Mon, 05 Feb 2007 16:22:59 +0100
+    net.xmlrpc
+
+ -- Olivier Meunier <olivier@clearbricks.org>  Mon, 05 Feb 2007 17:50:20 +0100
+
+libclearbricks (0.8-9) unstable; urgency=low ; svnrev=32
+
+  * SVN Revision 30 - olivier, on Thu, 25 Jan 2007 16:53:01 +0100
+    Implemented status_string in netHttp
+
+  * SVN Revision 31 - olivier, on Wed, 31 Jan 2007 13:53:10 +0100
+    NEWNEWS implementation in netNntp::getNewArticles().
+
+  * SVN Revision 32 - olivier, on Wed, 31 Jan 2007 19:32:05 +0100
+    Fix in net.nntp
+
+ -- Olivier Meunier <olivier@clearbricks.org>  Wed, 31 Jan 2007 19:36:08 +0100
+
+libclearbricks (0.8-8) unstable; urgency=low ; svnrev=29
+
+  * SVN Revision 28 - olivier, on Thu, 25 Jan 2007 10:31:20 +0100
+    Can now specify a port for postgresql connection.
+
+  * SVN Revision 29 - olivier, on Thu, 25 Jan 2007 14:47:15 +0100
+    Fix in text::QPEncode() static method
+
+ -- Olivier Meunier <olivier@clearbricks.org>  Thu, 25 Jan 2007 15:31:25 +0100
+
+libclearbricks (0.8-7) unstable; urgency=low ; svnrev=27
+
+  * SVN Revision 26 - olivier, on Wed, 17 Jan 2007 16:57:51 +0100
+    Chmod on feed cache file
+
+  * SVN Revision 27 - olivier, on Wed, 17 Jan 2007 16:58:09 +0100
+    Chmod on template cache file
+
+ -- Olivier Meunier <olivier@clearbricks.org>  Wed, 17 Jan 2007 16:59:11 +0100
+
+libclearbricks (0.8-6) unstable; urgency=low ; svnrev=25
+
+  * SVN Revision 25 - olivier, on Wed, 17 Jan 2007 16:22:49 +0100
+    Fixed chmod bug.
+
+ -- Olivier Meunier <olivier@clearbricks.org>  Wed, 17 Jan 2007 16:23:25 +0100
+
+libclearbricks (0.8-5) unstable; urgency=low ; svnrev=24
+
+  * SVN Revision 24 - olivier, on Tue, 16 Jan 2007 16:13:10 +0100
+    New debian changelog
+
+ -- Olivier Meunier <olivier@clearbricks.org>  Wed, 17 Jan 2007 14:26:32 +0100
+
 libclearbricks (0.8-4) unstable; urgency=low ; svnrev=23
 
   * SVN Revision 18 - mik, on Fri, 12 Jan 2007 13:33:59 +0100
