--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+libclearbricks (0.8-13) unstable; urgency=low ; svnrev=62
+
+  * SVN Revision 61 - mik, on Mon, 02 Jul 2007 11:10:18 +0200
+    last version changelog 
+
+  * SVN Revision 62 - olivier, on Fri, 06 Jul 2007 13:14:27 +0200
+    Fixed a bug in socketMail::getFrom()
+
+ -- Olivier Meunier <olivier@clearbricks.org>  Fri, 06 Jul 2007 13:18:46 +0200
+
 libclearbricks (0.8-12) unstable; urgency=low ; svnrev=60
 
   * SVN Revision 53 - pep, on Sun, 03 Jun 2007 12:31:25 +0200
