--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,37 @@
+libclearbricks (0.8-21) unstable; urgency=low ; svnrev=151
+
+  * SVN Revision 142 - olivier, on Tue, 13 May 2008 14:26:02 +0200
+    New debian changelog
+
+  * SVN Revision 143 - olivier, on Mon, 02 Jun 2008 14:45:13 +0200
+    In imageTools::memoryAllocate, multiply by 8 instead of 5 
+
+  * SVN Revision 144 - olivier, on Tue, 03 Jun 2008 14:57:26 +0200
+    Fixed sorting bug in filemanager
+
+  * SVN Revision 145 - olivier, on Wed, 04 Jun 2008 09:15:57 +0200
+    Fixed a minor bug in imageTools when image size becomes zero.
+
+  * SVN Revision 146 - olivier, on Fri, 06 Jun 2008 10:30:46 +0200
+    "'" is a space in text::tidyURL
+
+  * SVN Revision 147 - olivier, on Fri, 06 Jun 2008 10:54:59 +0200
+    Added filemanager::getPwd() and filemanager::writable() methods.
+
+  * SVN Revision 148 - olivier, on Fri, 06 Jun 2008 14:11:34 +0200
+    Removed dead line in feedReader.
+
+  * SVN Revision 149 - olivier, on Mon, 16 Jun 2008 09:25:37 +0200
+    Changed longdesc by title in wiki2xhtml.
+
+  * SVN Revision 150 - olivier, on Thu, 19 Jun 2008 17:50:31 +0200
+    Added languages in lib.l10n.php
+
+  * SVN Revision 151 - olivier, on Wed, 25 Jun 2008 18:04:43 +0200
+    Fixed bugs in l10n and url.handler.
+
+ -- Olivier Meunier <olivier@clearbricks.org>  Mon, 30 Jun 2008 15:03:33 +0200
+
 libclearbricks (0.8-20) unstable; urgency=low ; svnrev=141
 
   * SVN Revision 121 - olivier, on Tue, 26 Feb 2008 10:20:48 +0100
