--- a/tests/unit/fixtures/l10n/fr/core.po
+++ b/tests/unit/fixtures/l10n/fr/core.po
@@ -28,8 +28,8 @@ msgstr "Catégorie créée avec succès."
 
 msgid "The category has been successfully removed."
 msgid_plural "The categories have been successfully removed."
-msgstr[0] "Catégorie supprimée avec succès."
-msgstr[1] "Catégories supprimées avec succès."
+msgstr[0] "La catégorie a été supprimée avec succès."
+msgstr[1] "Les catégories ont été supprimées avec succès."
 
 #, php-format
 msgid "The e-mail was sent successfully to %s."
