--- a/tests/unit/fixtures/l10n/es/main.po
+++ b/tests/unit/fixtures/l10n/es/main.po
@@ -1010,7 +1010,7 @@ msgstr "Gestione su blog ahora"
 msgid "Installation can not be completed"
 msgstr ""
 
-msgid "For the said reasons, Dotclear can not be installed. Please refer to <a href=\"http://dotclear.org/documentation/2.0/admin/install\">the documentation</a> to learn how to correct the problem."
+msgid "For the said reasons, Dotclear can not be installed. Please refer to <a href=\"https://dotclear.org/documentation/2.0/admin/install\">the documentation</a> to learn how to correct the problem."
 msgstr ""
 
 #, php-format
@@ -1034,7 +1034,7 @@ msgstr ""
 msgid "Attention:"
 msgstr "Acción"
 
-msgid "this wizard may not function on every host. If it does not work for you, please refer to <a href=\"http://dotclear.org/documentation/2.0/admin/install\">the documentation</a> to learn how to create the <strong>config.php</strong> file manually."
+msgid "this wizard may not function on every host. If it does not work for you, please refer to <a href=\"https://dotclear.org/documentation/2.0/admin/install\">the documentation</a> to learn how to create the <strong>config.php</strong> file manually."
 msgstr ""
 
 msgid "System information"
@@ -1975,15 +1975,15 @@ msgstr "No es posible borrar el fichero %s"
 msgid "Downloaded Dotclear archive seems to be corrupted. Try <a %s>download it</a> again."
 msgstr "El archivo de Dotclear descargado parece estar dañado. Intente <a %s>descargarlo</a> de nuevo."
 
-msgid "The following files of your Dotclear installation have been modified so we won't try to update your installation. Please try to <a href=\"http://dotclear.org/download\">update manually</a>."
-msgstr "Los siguientes ficheros de su instalación de Dotclear han sido modificados, por lo que no se intenta actualizar su instalación. Intente  <a href=\"http://dotclear.org/download\">actualizarla manualmente</a>."
+msgid "The following files of your Dotclear installation have been modified so we won't try to update your installation. Please try to <a href=\"https://dotclear.org/download\">update manually</a>."
+msgstr "Los siguientes ficheros de su instalación de Dotclear han sido modificados, por lo que no se intenta actualizar su instalación. Intente  <a href=\"https://dotclear.org/download\">actualizarla manualmente</a>."
 
 #, php-format
 msgid "The following files of your Dotclear installation are not readable. Please fix this or try to make a backup file named %s manually."
 msgstr "Los siguientes ficheros de su instalación de Dotclear no se pueden leer. Solucione esto o intente hacer un fichero de respaldo llamado %s manualmente."
 
-msgid "The following files of your Dotclear installation cannot be written. Please fix this or try to <a href=\"http://dotclear.org/download\">update manually</a>."
-msgstr "Los siguientes ficheros de su instalación de Dotclear no se pueden escribir. Solucione esto o intente <a href=\"http://dotclear.org/download\">actualizar manualmente</a>."
+msgid "The following files of your Dotclear installation cannot be written. Please fix this or try to <a href=\"https://dotclear.org/download\">update manually</a>."
+msgstr "Los siguientes ficheros de su instalación de Dotclear no se pueden escribir. Solucione esto o intente <a href=\"https://dotclear.org/download\">actualizar manualmente</a>."
 
 msgid "No newer Dotclear version available."
 msgstr "No hay disponible ninguna versión más moderna de Dotclear."
@@ -2868,7 +2868,7 @@ msgid "Unable to connect to database"
 msgstr ""
 
 #, php-format
-msgid "<p>This either means that the username and password information in your <strong>config.php</strong> file is incorrect or we can't contact the database server at \"<em>%s</em>\". This could mean your host's database server is down.</p> <ul><li>Are you sure you have the correct username and password?</li><li>Are you sure that you have typed the correct hostname?</li><li>Are you sure that the database server is running?</li></ul><p>If you're unsure what these terms mean you should probably contact your host. If you still need help you can always visit the <a href=\"http://forum.dotclear.net/\">Dotclear Support Forums</a>.</p>"
+msgid "<p>This either means that the username and password information in your <strong>config.php</strong> file is incorrect or we can't contact the database server at \"<em>%s</em>\". This could mean your host's database server is down.</p> <ul><li>Are you sure you have the correct username and password?</li><li>Are you sure that you have typed the correct hostname?</li><li>Are you sure that the database server is running?</li></ul><p>If you're unsure what these terms mean you should probably contact your host. If you still need help you can always visit the <a href=\"https://forum.dotclear.net/\">Dotclear Support Forums</a>.</p>"
 msgstr ""
 
 msgid "The following error was encountered while trying to read the database:"
